# Comparative-analysis-of-Rolling-Standard-Deviation-to-Short-Time-Fourier-Transfom

./: README.md  environment.yml  pyproject.toml
Comparative_engine/: ComparatorEngine.py  DataLoader.py  RollingSTDEVEngine.py  STFTEngine.py
Comparative_engine/DataLoader/: DataLoader.py
Comparative_engine/STFTEngine/: STFTEngine.py
Study/: main.tex  references.bib
notebook/: Findings.ipynb
